fix!: change returning value